JVM crash on Windows when start on JBR17
GitOrigin-RevId: 8505fcc363126e18af557ea8de022c393ec03fd1